--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -42,6 +42,7 @@ autogen-test-utils = { workspace = true }
 autogenstudio = { workspace = true }
 component-schema-gen = { workspace = true }
 magentic-one-cli = { workspace = true }
+autogen-cpas = { workspace = true }
 
 [tool.ruff]
 line-length = 120
